--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-name: Trigger Jenkins on Pull Request Close
+name: Trigger Jenkins Build on Main Branch Push
 
 on:
-  pull_request:
-    types:
-      - closed
+  push:
+    branches:
+      - main
 
 jobs:
   trigger_jenkins:
